--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -48,6 +48,7 @@ Wrong or missing information? Let me know at <a href="mailto:abarysh@princeton.e
 		<th width="14%"><span>Type of data</span></th>
 		<th width="14%"><span>Data status</span></th>
 		<th width="14%"><span>List of tested genes</span></th>
+		{# <th width="14%"><span>Download Data</span></th> #}
 	</tr>
 	</thead>
 	<tbody>
@@ -57,9 +58,10 @@ Wrong or missing information? Let me know at <a href="mailto:abarysh@princeton.e
         <td>{{ paper.link_detail|safe }}</td>
         <td>{{ paper.phenotypes|slice:":-2"|safe }}</td>
         <td>{{ paper.conditions|join_and_more:7|safe }}</td>
-		<td>{{ paper.data_available|join:", " }}</td>
-		<td>{{ paper.latest_data_status|capfirst }}</td>
-		<td>{{ paper.latest_tested_status|capfirst }}</td>
+	<td>{{ paper.data_available|join:", " }}</td>
+	<td>{{ paper.latest_data_status|capfirst }}</td>
+	<td>{{ paper.latest_tested_status|capfirst }}</td>
+	{# <td>{{ paper.download_path }}</td> #}
         </tr>
     {% endfor %}
     </tbody>
