a wee bit better for browsers not in full screen

--- a/static/papers/style.css
+++ b/static/papers/style.css
@@ -39,21 +39,19 @@ DIV.note {
 	}
 
 DIV.sub_navigation {
-
     margin: 10px 0px 10px 0px;
     clear: both;
 }
 
 DIV.sub_navigation SPAN.active {
-
-    background-color: #EBEBCF;
+    background-color:#EBEBCF;
     padding: .5em;
 
 }
 
 DIV.sub_navigation SPAN.inactive {
-    background-color: #FFFFFF;
-    padding: .5em;
+    background-color:transparent;
+    padding:.5em;
 }
 
 DIV.sub_navigation DIV.sub_navigation_block {
