--- a/static/papers/style.css
+++ b/static/papers/style.css
@@ -10,9 +10,9 @@ BODY {
 	font-weight: 100;
 }
 
-DIV.note {
-	font-size: 13px;
-	text-align: right;
+footer,.note {
+    font-size: 13px;
+    text-align: right;
     margin-bottom: 5px;
     clear: both;
 }
@@ -38,25 +38,19 @@ DIV.note {
 		width: 45%;
 	}
 
-DIV.sub_navigation {
+
+nav{ /* was .sub_navigation */
     margin: 10px 0px 10px 0px;
     clear: both;
 }
-
-DIV.sub_navigation SPAN.active {
-    background-color:#EBEBCF;
+nav span{
     padding: .5em;
-
 }
-
-DIV.sub_navigation SPAN.inactive {
+nav .active {
+    background-color:#EBEBCF;
+}
+nav .inactive {
     background-color:transparent;
-    padding:.5em;
-}
-
-DIV.sub_navigation DIV.sub_navigation_block {
-    float: left;
-    margin-right: 40px;
 }
 
 #title {
