--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -1,7 +1,6 @@
 {% load staticfiles %}
 {% load sub_navigation %}
 {% load my_filters %}
-
 <html>
 <head>
 <title>YeastPhenome.org - Papers</title>
@@ -21,37 +20,33 @@
   
 <div id="breadcrumbs"><a href="/">YeastPhenome.org</a> / </div>
 <h1>Papers</h1>
-<div class="sub_navigation">
-    <div class="sub_navigation_block">
-        <span class="{% active sub_navigation 'All' %}"><a href="/papers/{{ got }}">All</a> <span class="small">{{ num_all }}</span></span>
-    </div>
-    <div class="sub_navigation_block">
-        <span class="{% active sub_navigation 'Haploid' %}"><a href="/papers/haploid/{{ got }}">Haploid</a>&nbsp;<span class="small">{{ num_haploid }}</span></span>
-        <span class="{% active sub_navigation 'Diploid homozygous' %}"><a href="/papers/diploid/homozygous/{{ got }}">Homozygous diploid</a>&nbsp;<span class="small">{{ num_diploid_homozygous }}</span></span>
-        <span class="{% active sub_navigation 'Diploid heterozygous' %}"><a href="/papers/diploid/heterozygous/{{ got }}">Heterozygous diploid</a> <span class="small">{{ num_diploid_heterozygous }}</span></span>
-    </div>
-    <div class="sub_navigation_block">
-        <span class="{% active sub_navigation 'Quantitative' %}"><a href="/papers/quantitative/{{ got }}">Quantitative data</a> <span class="small">{{ num_quantitative }}</span></span>
-        <span class="{% active sub_navigation 'Discrete' %}"><a href="/papers/discrete/{{ got }}">Discrete data</a> <span class="small">{{ num_discrete }}</span></span>
-    </div>
-</div>
-<div class="note">
-Wrong or missing information? Let me know at <a href="mailto:abarysh@princeton.edu" title="Please, send whatever you have.">abarysh@princeton.edu</a>.
-</div>
+
 {% if papers_list %}
-    <table id="papersTable" class="tablesorter" width="100%" border="1">
-    <thead>
+<table id="papersTable" class="tablesorter" width="100%" border="1">
+  <caption>
+    <nav>
+      <span class="{% active sub_navigation 'All' %}"><a href="/papers/{{ got }}">All</a> <span class="small">{{ num_all }}</span></span>
+      <span class="{% active sub_navigation 'Haploid' %}"><a href="/papers/haploid/{{ got }}">Haploid</a>&nbsp;<span class="small">{{ num_haploid }}</span></span>
+      <span class="{% active sub_navigation 'Diploid homozygous' %}"><a href="/papers/diploid/homozygous/{{ got }}">Homozygous diploid</a>&nbsp;<span class="small">{{ num_diploid_homozygous }}</span></span>
+      <span class="{% active sub_navigation 'Diploid heterozygous' %}"><a href="/papers/diploid/heterozygous/{{ got }}">Heterozygous diploid</a> <span class="small">{{ num_diploid_heterozygous }}</span></span>
+      <span class="{% active sub_navigation 'Quantitative' %}"><a href="/papers/quantitative/{{ got }}">Quantitative data</a> <span class="small">{{ num_quantitative }}</span></span>
+      <span class="{% active sub_navigation 'Discrete' %}"><a href="/papers/discrete/{{ got }}">Discrete data</a> <span class="small">{{ num_discrete }}</span></span>
+    </nav>
+  </caption>
+  <thead>
     <tr>
-		<th width="10%"><span>PMID</span></th>
-		<th width="20%"><span>FirstAuthor~LastAuthor, Year</span></th>
-		<th width="14%"><span>Phenotypes</span></th>
-		<th width="14%"><span>Conditions</span></th>
-		<th width="14%"><span>Type of data</span></th>
-		<th width="14%"><span>Data status</span></th>
-		<th width="14%"><span>List of tested genes</span></th>
-	</tr>
-	</thead>
-	<tbody>
+      <th width="10%"><span>PMID</span></th>
+      <th width="20%"><span>FirstAuthor~LastAuthor, Year</span></th>
+      <th width="14%"><span>Phenotypes</span></th>
+      <th width="14%"><span>Conditions</span></th>
+{% if debug >= 1 %}
+      <th width="14%"><span>Type of data</span></th>
+      <th width="14%"><span>Data status</span></th>
+      <th width="14%"><span>List of tested genes</span></th>
+{% endif %}
+    </tr>
+  </thead>
+  <tbody>
     {% for paper in papers_list %}
         <tr>
         <td>
@@ -62,9 +57,11 @@ Wrong or missing information? Let me know at <a href="mailto:abarysh@princeton.e
         <td>{{ paper.link_detail|safe }}</td>
         <td>{{ paper.phenotypes|slice:":-2"|safe }}</td>
         <td>{{ paper.conditions|join_and_more:7|safe }}</td>
+{% if debug >= 1 %}
 	<td>{{ paper.data_available|join:", " }}</td>
 	<td>{{ paper.latest_data_status|capfirst }}</td>
 	<td>{{ paper.latest_tested_status|capfirst }}</td>
+{% endif %}
         </tr>
     {% endfor %}
     </tbody>
@@ -72,6 +69,6 @@ Wrong or missing information? Let me know at <a href="mailto:abarysh@princeton.e
 {% else %}
     <p>No papers are available.</p>
 {% endif %}
+{% include "footer.html" %}
 </body>
 </html>
-
