--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -22,14 +22,7 @@ We are collecting phenotypic data derived from <strong>systematic screens</stron
 <div class="right">
 
   <form action="/papers/" method="GET">
-    <dl>
-      <dt>PMID</dt>
-      <dd><input type="number" name="pmid"/></dd>
-
-      <dt>First/Last Author</dt>
-      <dd><input type="text" name="author"/></dd>
-    </dl>
-    <p><button type="submit">Submit</button></p>
+    <p>Search: <input type="text" name="s"/>&nbsp;<button type="submit">Submit</button></p>
   </form>
 
 </div><div id="right">
