search items seporated by spaces are considered ory

--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -15,14 +15,14 @@ We are collecting phenotypic data derived from <strong>systematic screens</stron
 
 <p>Our primary <strong>source of data</strong> are the supplementary materials of the relevant <a href="/papers/"><strong>publications</strong></a>. On top of that, <a href="/contributors/">many authors</a> have contributed more complete and previously unpublished versions of their datasets (e.g., raw quantitative values from which the published hit list was derived). These datasets will be specifically flagged to emphasize their special status.
 
-<p>As of today, we are at the data gathering stage. The plan is to collect, organize and share in a <strong>standardized format</strong> all of the phenotypic data obtained by the yeast community. Updates on progress will be released via this website. 
+<p>As of today, we are at the data gathering stage. The plan is to collect, organize and share in a <strong>standardized format</strong> all of the phenotypic data obtained by the yeast community. Updates on progress wil5Al be released via this website. 
 </div>
 
 
 <div class="right">
 
   <form action="/papers/" method="GET">
-    <p>Search: <input type="text" name="s"/>&nbsp;<button type="submit">Submit</button></p>
+    <p>Search: <input type="text" name="s" value="{{ got }}"/>&nbsp;<button type="submit">Submit</button></p>
   </form>
 
 </div><div id="right">
