--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -18,7 +18,7 @@
 	); 
 </script>
   
-<div id="breadcrumbs"><a href="/">YeastPhenome.org</a> / </div>
+<div id="breadcrumbs"><a href="/{{ got }}">YeastPhenome.org</a> / </div>
 <h1>Papers</h1>
 
 {% if papers_list %}
