added text description to searchy

--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -23,6 +23,7 @@ We are collecting phenotypic data derived from <strong>systematic screens</stron
 
   <form action="/papers/" method="GET">
     <p>Search: <input type="text" name="s" value="{{ got }}"/>&nbsp;<button type="submit">Submit</button></p>
+    <p class="small">Search PMIDs, first/last authors, and phenotypes.</p>
   </form>
 
 </div><div id="right">
