it now infroms users if it should have datafiles but it can't find them

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -38,7 +38,13 @@
 <dt>Downloads</dt>
 
 {% if paper.has_data %}
+
+{% if paper.download_path_exists %}
 <dd><a href="/papers/{{ paper.pk }}.zip">Zip</dd>
+{% else %}
+<dd>Unable to locate files.</dd>
+{% endif %}
+
 {% else %}
 <dd class="nothing">&#8210; no files &#8210;</dd>
 {% endif %}
