Hopefully all pages have <titles>s now, which is customized in the settings.py file.  Plus removed some deprecated warnings.

--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -1,6 +1,8 @@
 {% load staticfiles %}
 <html>
 <head>
+
+<title>{{ TITLE }} / Conditions / {{ object|capfirst }}</title>
 <link rel="stylesheet" type="text/css" href="{% static 'papers/style.css' %}" />
 <script type="text/javascript" src="{% static 'papers/scripts/jquery.tablesorter/jquery-latest.js' %}"></script> 
 <script type="text/javascript" src="{% static 'papers/scripts/jquery.tablesorter/jquery.tablesorter.js' %}"></script>
@@ -15,7 +17,7 @@
 	); 
 </script>
   
-<div id="breadcrumbs"><a href="/">YeastPhenome.org</a> / <a href="/conditions/">Conditions</a> /</div>
+<div id="breadcrumbs"><a href="/">{{ TITLE }}</a> / <a href="/conditions/">Conditions</a> /</div>
 <h1>{{ object|capfirst }}</h1>
 
 <p><strong>Description.</strong> {{ object.description }}</p>
