--- a/templates/yeastphenome/index.html
+++ b/templates/yeastphenome/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="{% static 'papers/style.css' %}" />
+<title>{{ TITLE }}</title>
 </head>
 
 <body>
 
-<h1><strong>YeastPhenome.org</strong> &mdash; Database of systematic mutant phenotypes in yeast</h1>
+<h1><strong>{{ TITLE }}</strong> &mdash; Database of systematic mutant phenotypes in yeast</h1>
 
 <div id="left">
 We are collecting phenotypic data derived from <strong>systematic screens</strong> of large-scale <strong>mutant collections</strong> in budding yeast <em>Saccharomyces cerevisiae</em>. Our goal is to study the relationship between different mutant phenotypes and integrate them into mapping of the functional organization of biological pathways.
