moved the "No papers are available." to a better spoty

--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -74,7 +74,7 @@
     </tbody>
     </table>
 {% else %}
-    <p>No papers are available.</p>
+    <p style="clear:both">No papers are available.</p>
 {% endif %}
 {% include "footer.html" %}
 </body>
