--- a/papers/templates/papers/index.html
+++ b/papers/templates/papers/index.html
@@ -48,7 +48,7 @@ $(document).ready(function(){
       <th>Phenotypes</th>
       <th>Conditions</th>
       <th>Type of data</th>
-      {% if verbose >= 1 %}
+      {% if request.GET.verbose >= 1 %}
       <th>Data status</th>
       <th>List of tested genes</th>
       <th>Download</th>
@@ -62,11 +62,11 @@ $(document).ready(function(){
 	<a class="external pmid" href="http://www.ncbi.nlm.nih.gov/pubmed/{{ paper.pmid }}/">{{ paper.pmid }}</a>
 	{% endif %}
       </td>
-      <td><a href="{% url 'papers:detail' paper.pk  %}">{{ paper }}</a></td>
+      <td class="text-nowrap"><a href="{% url 'papers:detail' paper.pk  %}">{{ paper }}</a></td>
       <td>{{ paper.phenotypes|slice:":-2"|safe }}</td>
       <td>{{ paper.conditions|join_and_more:7|safe }}</td>
-      <td>{{ paper.data_available|join:", " }}</td>
-      {% if verbose >= 1 %}
+      <td class="text-nowrap">{{ paper.data_available|join:", " }}</td>
+      {% if request.GET.verbose >= 1 %}
       <td>{{ paper.latest_data_status|capfirst }}</td>
       <td>{{ paper.latest_tested_status|capfirst }}</td>
       <td>{% if paper.has_data %}
