--- a/phenotypes/templates/phenotypes/detail.html
+++ b/phenotypes/templates/phenotypes/detail.html
@@ -19,7 +19,7 @@
 </p>
 
 {% comment %}
-<!-- I can't find an example of output from this, so for now letst
+<!-- I can't find an example of output from this, so for now lets
      comment out. -->
 
 <p><strong>Description.</strong> {{ object.description }}</p>
@@ -34,20 +34,27 @@
       <th>Phenotype (variant)</th>
       <th>Condition set</th>
       <th>Collection</th>
+      <th>Type of data</th>
+      {% if request.GET.verbose >= 1 %}
       <th>Tested genes</th>
       <th>Tested genes published</th>
       <th>Tested genes available</th>
       <th>Data measured</th>
       <th>Data published</th>
-      <th>Data available</th>
+      {% endif %}
     </tr>
   </thead><tbody>
     {% for dataset in object.datasets %}
     <tr>
-      <td>{{ dataset.paper.link_detail|safe }}</td>
+      <td class="text-nowrap">{{ dataset.paper.link_detail|safe }}</td>
       <td>{{ dataset.phenotype }}</td>
       <td>{{ dataset.conditionset }}</td>
       <td>{{ dataset.collection }}</td>
+      <td>{{ dataset.data_available|capfirst }}
+        <br>{{ dataset.data_source|safe }}
+        <br>{{ paper.latest_data_status|capfirst }}
+      </td>
+      {% if request.GET.verbose >= 1 %}
       <td>{{ dataset.tested_num }}</td>
       <td>{{ dataset.tested_genes_published|yesno|capfirst }}</td>
       <td>
@@ -59,10 +66,7 @@
       </td>
       <td>{{ dataset.data_measured|capfirst }}</td>
       <td>{{ dataset.data_published|capfirst }}</td>
-      <td>{{ dataset.data_available|capfirst }}
-        <br>{{ dataset.data_source|safe }}
-        <br>{{ paper.latest_data_status|capfirst }}
-      </td>
+      {% endif %}
     </tr>
     {% endfor %}
   </tbody>
