--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -27,18 +27,20 @@
   {% endif %}
   <thead>
     <tr>
-      <th>Phenotype</th>
-      <th>Condition set</th>
-      <th>Collection</th>
-      <th>Tested genes</th>
-      <th>Tested genes published</th>
-      <th>Tested genes available</th>
-      <th>Data measured</th>
-      <th>Data published</th>
-      <th>Data available</th>
+      <th rowspan="2">Phenotype</th>
+      <th rowspan="2">Condition set</th>
+      <th rowspan="2">Collection</th>
+      <td colspan="3">Tested genes</td>
+      <th rowspan="2">Data measured</th>
+      <th rowspan="2">Data published</th>
+      <th rowspan="2">Data available</th>
       {% if request.GET.verbose >= 1 %}
-      <th>Has data</th>
+      <th rowspan="2">Has data</th>
       {% endif %}
+    </tr><tr>
+      <th>#</th>
+      <th>Published</th>
+      <th>Available</th>
     </tr>
   </thead><tbody>
     {% for dataset in object.dataset_set.all %}
