--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -33,7 +33,7 @@
       <td colspan="3">Tested genes</td>
       <th rowspan="2">Data measured</th>
       <th rowspan="2">Data published</th>
-      <th rowspan="2">Data available</th>
+      <th rowspan="2">Type of data</th>
       {% if request.GET.verbose >= 1 %}
       <th rowspan="2">Has data</th>
       {% endif %}
