--- a/templates/head.html
+++ b/templates/head.html
@@ -1,5 +1,4 @@
-{% load staticfiles %}
-<meta charset="utf-8">
+{% load staticfiles %}<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
