mostly header fix

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -74,4 +74,5 @@
 {% if object.notes %}<p>{{ object.notes }}</p>{% endif %}
 <aside class="bg-warning">No datasets are loaded.</aside>
 {% endif %}
+{% include "footer.html" %}
 </div>{# container #}</body></html>
