--- a/templates/head.html
+++ b/templates/head.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 {% if JavaScript %}
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-{% if 'bootstrap' in Javascript %}
+{% if 'bootstrap' in JavaScript %}
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 {% endif %}
 {% if 'tablesorter' in JavaScript %}
