--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -61,4 +61,5 @@
 {% else %}
 <aside class="bg-warning">No papers associated.</aside>
 {% endif %}
+{% include "footer.html" %}
 </div{# container #}></body></html>
