--- a/static/yp.css
+++ b/static/yp.css
@@ -14,7 +14,7 @@ hgroup{
 }
 hgroup h1{
     margin-top:0;
-    margin-bottom:0;
+    margin-bottom:1ex;
 }
 footer{
     border-top:2px double whitesmoke;
@@ -30,6 +30,7 @@ footer{
     content:'\27E9';
 }
 .external:after{
+    white-space:nowrap;
     padding-left:.3ex;
     content:url("images/external-link-blue-medium.png");
 }
